--- a/Breast Cancer Classification.ipynb
+++ b/Breast Cancer Classification.ipynb
@@ -743,9 +743,22 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0, 48],\n",
+       "       [ 0, 66]], dtype=int64)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cm2 = confusion_matrix(y_test, y_predict)"
+    "cm2 = confusion_matrix(y_test, y_predict)\n",
+    "cm2"
    ]
   },
   {
@@ -1020,9 +1033,22 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[43,  5],\n",
+       "       [ 0, 66]], dtype=int64)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cm3 = confusion_matrix(y_test, y_predict)"
+    "cm3 = confusion_matrix(y_test, y_predict)\n",
+    "cm3"
    ]
   },
   {
@@ -1171,26 +1197,7 @@
      "text": [
       "Fitting 3 folds for each of 16 candidates, totalling 48 fits\n",
       "[CV] C=0.1, gamma=1, kernel=rbf ......................................\n",
-      "[CV] .......... C=0.1, gamma=1, kernel=rbf, score=0.967, total=   0.0s"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\annak\\Anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:1978: FutureWarning: The default value of cv will change from 3 to 5 in version 0.22. Specify it explicitly to silence this warning.\n",
-      "  warnings.warn(CV_WARNING, FutureWarning)\n",
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    0.0s remaining:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done   2 out of   2 | elapsed:    0.0s remaining:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done   3 out of   3 | elapsed:    0.0s remaining:    0.0s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
+      "[CV] .......... C=0.1, gamma=1, kernel=rbf, score=0.967, total=   0.0s\n",
       "[CV] C=0.1, gamma=1, kernel=rbf ......................................\n",
       "[CV] .......... C=0.1, gamma=1, kernel=rbf, score=0.921, total=   0.0s\n",
       "[CV] C=0.1, gamma=1, kernel=rbf ......................................\n",
@@ -1210,7 +1217,26 @@
       "[CV] C=0.1, gamma=0.001, kernel=rbf ..................................\n",
       "[CV] ...... C=0.1, gamma=0.001, kernel=rbf, score=0.638, total=   0.0s\n",
       "[CV] C=0.1, gamma=0.001, kernel=rbf ..................................\n",
-      "[CV] ...... C=0.1, gamma=0.001, kernel=rbf, score=0.638, total=   0.0s\n",
+      "[CV] ...... C=0.1, gamma=0.001, kernel=rbf, score=0.638, total=   0.0s"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\annak\\Anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:1978: FutureWarning: The default value of cv will change from 3 to 5 in version 0.22. Specify it explicitly to silence this warning.\n",
+      "  warnings.warn(CV_WARNING, FutureWarning)\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    0.0s remaining:    0.0s\n",
+      "[Parallel(n_jobs=1)]: Done   2 out of   2 | elapsed:    0.0s remaining:    0.0s\n",
+      "[Parallel(n_jobs=1)]: Done   3 out of   3 | elapsed:    0.0s remaining:    0.0s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
       "[CV] C=0.1, gamma=0.001, kernel=rbf ..................................\n",
       "[CV] ...... C=0.1, gamma=0.001, kernel=rbf, score=0.642, total=   0.0s\n",
       "[CV] C=1, gamma=1, kernel=rbf ........................................\n",
@@ -1291,7 +1317,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done  48 out of  48 | elapsed:    0.5s finished\n"
+      "[Parallel(n_jobs=1)]: Done  48 out of  48 | elapsed:    0.3s finished\n"
      ]
     },
     {
@@ -1373,9 +1399,22 @@
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[45,  3],\n",
+       "       [ 0, 66]], dtype=int64)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cm4 = confusion_matrix(y_test, grid_predictions)"
+    "cm4 = confusion_matrix(y_test, grid_predictions)\n",
+    "cm4"
    ]
   },
   {
