--- a/Breast_Cancer_Classification.ipynb
+++ b/Breast_Cancer_Classification.ipynb
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Check column names"
+    "Check column names"
    ]
   },
   {
@@ -84,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Print features and target (names)"
+    "Print features and target (names)"
    ]
   },
   {
@@ -173,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Check data column shape"
+    "Check data column shape"
    ]
   },
   {
@@ -467,7 +467,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Check type of cancer where 0 - malignant, 1 - benign"
+    "Check type of cancer where 0 - malignant, 1 - benign"
    ]
   },
   {
@@ -503,7 +503,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Correlation matrix\n",
+    "### Print correlation matrix\n",
     "The closer the value to 1 is, the higher the correlation between two features is"
    ]
   },
@@ -1217,7 +1217,15 @@
       "[CV] C=0.1, gamma=0.001, kernel=rbf ..................................\n",
       "[CV] ...... C=0.1, gamma=0.001, kernel=rbf, score=0.638, total=   0.0s\n",
       "[CV] C=0.1, gamma=0.001, kernel=rbf ..................................\n",
-      "[CV] ...... C=0.1, gamma=0.001, kernel=rbf, score=0.638, total=   0.0s"
+      "[CV] ...... C=0.1, gamma=0.001, kernel=rbf, score=0.638, total=   0.0s\n",
+      "[CV] C=0.1, gamma=0.001, kernel=rbf ..................................\n",
+      "[CV] ...... C=0.1, gamma=0.001, kernel=rbf, score=0.642, total=   0.0s\n",
+      "[CV] C=1, gamma=1, kernel=rbf ........................................\n",
+      "[CV] ............ C=1, gamma=1, kernel=rbf, score=0.993, total=   0.0s\n",
+      "[CV] C=1, gamma=1, kernel=rbf ........................................\n",
+      "[CV] ............ C=1, gamma=1, kernel=rbf, score=0.947, total=   0.0s\n",
+      "[CV] C=1, gamma=1, kernel=rbf ........................................\n",
+      "[CV] ............ C=1, gamma=1, kernel=rbf, score=0.980, total=   0.0s"
      ]
     },
     {
@@ -1237,14 +1245,6 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "[CV] C=0.1, gamma=0.001, kernel=rbf ..................................\n",
-      "[CV] ...... C=0.1, gamma=0.001, kernel=rbf, score=0.642, total=   0.0s\n",
-      "[CV] C=1, gamma=1, kernel=rbf ........................................\n",
-      "[CV] ............ C=1, gamma=1, kernel=rbf, score=0.993, total=   0.0s\n",
-      "[CV] C=1, gamma=1, kernel=rbf ........................................\n",
-      "[CV] ............ C=1, gamma=1, kernel=rbf, score=0.947, total=   0.0s\n",
-      "[CV] C=1, gamma=1, kernel=rbf ........................................\n",
-      "[CV] ............ C=1, gamma=1, kernel=rbf, score=0.980, total=   0.0s\n",
       "[CV] C=1, gamma=0.1, kernel=rbf ......................................\n",
       "[CV] .......... C=1, gamma=0.1, kernel=rbf, score=0.974, total=   0.0s\n",
       "[CV] C=1, gamma=0.1, kernel=rbf ......................................\n",
